--- a/index.html
+++ b/index.html
@@ -23,31 +23,27 @@
 						<h2 class="two">2</h2>
 					</div>
 					<div class="square">
-						<img
-							class="bomb"
-							src="https://lh3.googleusercontent.com/proxy/4LxxzZYZMkG_SwyO5D_il__qCsAw03xRry0_fMv1pfXGTwF6cNvhGqbyXrZA1Ws5VbFaQAlPyUlz_TpMCfs7L1tlEY91ruB2GGKBnW2d__xb8Jj8nt8VjKSuaw2n0dX4P79Z"
-							alt=""
-						/>
+						<h2 class="bomb"></h2>
 					</div>
 					<div class="square">
 						<h2 class="two">2</h2>
 					</div>
-					<div class="square">
-						<h2 class="">f</h2>
+					<div class="full">
+						<h2 class="cell one">1</h2>
 					</div>
-					<div class="square">
-						<h2 class="empty">f</h2>
+					<div class="full">
+						<h2 class="cell one">1</h2>
 					</div>
 				</div>
 				<div class="row">
 					<div class="square">
-						<h2 class="bomb">b</h2>
+						<h2 class="bomb"></h2>
 					</div>
 					<div class="square">
 						<h2 class="two">2</h2>
 					</div>
 					<div class="square">
-						<span class="bomb">b</span>
+						<span class="bomb"></span>
 					</div>
 					<div class="square">
 						<h2 class="two">2</h2>
@@ -59,10 +55,10 @@
 						<h2 class="three">3</h2>
 					</div>
 					<div class="square">
-						<h2 class="bomb">b</h2>
+						<h2 class="bomb"></h2>
 					</div>
-					<div class="square">
-						<h2 class="">f</h2>
+					<div class="full">
+						<h2 class="cell three">3</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -85,10 +81,10 @@
 						<h2 class="three">3</h2>
 					</div>
 					<div class="square">
-						<h2 class="bomb">b</h2>
+						<h2 class="bomb"></h2>
 					</div>
-					<div class="square">
-						<h2 class="">f</h2>
+					<div class="full">
+						<h2 class="cell three">3</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -113,8 +109,8 @@
 					<div class="square">
 						<h2 class="bomb"></h2>
 					</div>
-					<div class="square">
-						<h2 class="">f</h2>
+					<div class="full">
+						<h2 class="cell three">3</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -134,18 +130,18 @@
 						<h2 class="one">1</h2>
 					</div>
 					<div class="square">
-						<h2 class="bomb">b</h2>
+						<h2 class="bomb"></h2>
 					</div>
-					<div class="square">
-						<h2 class="">f</h2>
+					<div class="full">
+						<h2 class="cell two">2</h2>
 					</div>
-					<div class="square">
-						<h2 class="">f</h2>
+					<div class="full">
+						<h2 class="cell one">1</h2>
 					</div>
 				</div>
 				<div class="row">
 					<div class="square">
-						<h2 class="bomb">b</h2>
+						<h2 class="bomb"></h2>
 					</div>
 					<div class="square">
 						<h2 class="one">1</h2>
@@ -166,7 +162,7 @@
 						<h2 class="three">3</h2>
 					</div>
 					<div class="square">
-						<h2 class="bomb">b</h2>
+						<h2 class="bomb"></h2>
 					</div>
 				</div>
 				<div class="row">
@@ -186,13 +182,13 @@
 						<h2 class="one">1</h2>
 					</div>
 					<div class="square">
-						<h2 class="bomb">b</h2>
+						<h2 class="bomb"></h2>
 					</div>
-					<div class="square">
-						<h2 class="">f</h2>
+					<div class="full">
+						<h2 class="cell one">1</h2>
 					</div>
-					<div class="square">
-						<h2 class="">f</h2>
+					<div class="full">
+						<h2 class="cell one">1</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -211,14 +207,14 @@
 					<div class="square">
 						<h2 class="one">1</h2>
 					</div>
-					<div class="square">
-						<h2 class="">f</h2>
+					<div class="full">
+						<h2 class="cell two">2</h2>
 					</div>
-					<div class="square">
-						<h2 class="">f</h2>
+					<div class="full">
+						<h2 class="cell bomb"></h2>
 					</div>
-					<div class="square">
-						<h2 class="">f</h2>
+					<div class="full">
+						<h2 class="cell two">2</h2>
 					</div>
 				</div>
 			</section>
