--- a/index.html
+++ b/index.html
@@ -74,8 +74,24 @@
 					<div class="square">
 						<h2 class="one">1</h2>
 					</div>
+					<div class="square"></div>
 					<div class="square">
-						<h2 class=""></h2>
+						<h2 class="three">3</h2>
+					</div>
+					<div class="square">
+						<h2 class="bomb"></h2>
+					</div>
+					<div class="full">
+						<h2 class="cell three">3</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="square"></div>
+					<div class="square"></div>
+					<div class="square"></div>
+					<div class="square"></div>
+					<div class="square">
+						<h2 class="one">1</h2>
 					</div>
 					<div class="square">
 						<h2 class="three">3</h2>
@@ -89,43 +105,13 @@
 				</div>
 				<div class="row">
 					<div class="square">
-						<h2 class=""></h2>
-					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
-					<div class="square">
-						<h2 class="one">1</h2>
-					</div>
-					<div class="square">
-						<h2 class="three">3</h2>
-					</div>
-					<div class="square">
-						<h2 class="bomb"></h2>
-					</div>
-					<div class="full">
-						<h2 class="cell three">3</h2>
-					</div>
-				</div>
-				<div class="row">
-					<div class="square">
 						<h2 class="one">1</h2>
 					</div>
 					<div class="square">
 						<h2 class="one">1</h2>
 					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
+					<div class="square"></div>
+					<div class="square"></div>
 					<div class="square">
 						<h2 class="one">1</h2>
 					</div>
@@ -146,12 +132,8 @@
 					<div class="square">
 						<h2 class="one">1</h2>
 					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
+					<div class="square"></div>
+					<div class="square"></div>
 					<div class="square">
 						<h2 class="two">2</h2>
 					</div>
@@ -172,12 +154,8 @@
 					<div class="square">
 						<h2 class="one">1</h2>
 					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
+					<div class="square"></div>
+					<div class="square"></div>
 					<div class="square">
 						<h2 class="one">1</h2>
 					</div>
@@ -192,18 +170,10 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
-					<div class="square">
-						<h2 class=""></h2>
-					</div>
+					<div class="square"></div>
+					<div class="square"></div>
+					<div class="square"></div>
+					<div class="square"></div>
 					<div class="square">
 						<h2 class="one">1</h2>
 					</div>
